--- a/ch06/user-registration/course-tracker-start/src/main/resources/templates/index.html
+++ b/ch06/user-registration/course-tracker-start/src/main/resources/templates/index.html
@@ -29,16 +29,16 @@
                 <a class="nav-link" href="#" th:href="@{/addcourse}">Add Course</a>
             </li>
         </ul>
-        <!--ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <form th:action="@{/logout}" method="post">
                     <button class="btn btn-danger" type="submit">logout</button>
                 </form>
             </li>
-        </ul-->
+        </ul>
     </div>
 </nav>
-<div th:switch="${#lists.size(courses)}" class="container my-5">
+<div th:switch="${#lists.size(courses)}" class="container my-2">
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
